Reload table when new scoring is added. Style modification for correct displaying scrollbars.

--- a/app/scripts/app-components/gel-scoring/_styles.scss
+++ b/app/scripts/app-components/gel-scoring/_styles.scss
@@ -39,11 +39,12 @@ select.gel-scoring-cell {
 
 .gel-scoring-view {
 	width: 100%;
+	overflow-x: auto;
 }
 
 .gel-scoring-view .label-barcode { font-size: 13pt;   margin-right: 1em;}
 
-.gel-scoring-view .header-button { float: right;}
+.gel-scoring-view .header-button { float: right; height: 1.5em;}
 
 .gel-scoring-view td.nosample select {
 	display: none;
@@ -53,7 +54,7 @@ select.gel-scoring-cell {
     
 }
 
-#scoreModal .modal-body { max-height: 420px; }
+#scoreModal .modal-body { max-height: 420px; clear: both;}
 
 body .modal-backdrop, .modal-backdrop.fade.in {
 	opacity: 0.6;
@@ -63,7 +64,7 @@ body .modal-backdrop, .modal-backdrop.fade.in {
 	margin-left: auto;
 	margin-right: auto;
 	left: 5%;
-	overflow: scroll;
+	overflow-y: auto;
 }
 
 #scoreModal .modal-footer {
